# CaptureSight

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md
CaptureSight/: Makefile
CaptureSight-Applet/: Makefile
CaptureSight-Overlay/: Makefile
Resources/: EncounterNest8Archive.fbs  sword-encounters.json
libcapturesight/: Makefile
libcsight/: Makefile
libs/csight-core/: Cargo.toml  Makefile  aarch64-none-elf.json  build.rs  cbindgen.toml
libs/csight-core/.cargo/: config
libs/csight-core/c-export/: arceus.h  bdsp.h  csight-core.h  den.h  generated.h  lcrng.h  pa8.h  pk8.h  pk9.h  pkx.h  rng_tracker.h  spawn.h  sv.h  swsh.h  trainer_info.h  xoroshiro.h  xorshift.h
libs/csight-core/src/: c_str.rs  dmntcht.rs  heap_allocator.rs  lib.rs  titles.rs  trainer_info.rs  utils.rs
libs/csight-core/src/arceus/: mod.rs  offsets.rs  read.rs  rng.rs  spawn.rs  spawn_group.rs
libs/csight-core/src/arceus/spawns/: mod.rs  spawn.rs  spawn_group.rs  spawn_group_list.rs  spawn_pair.rs
libs/csight-core/src/bdsp/: mod.rs  offsets.rs  read.rs  rng.rs
libs/csight-core/src/c_api/: den.rs  lcrng.rs  mod.rs  pk8.rs  pkx.rs  raid_seed.rs  xoroshiro.rs  xorshift.rs
libs/csight-core/src/pkm/: mod.rs  pa8.rs  pk8.rs  pk9.rs  pkx.rs
libs/csight-core/src/rng/: lcrng.rs  mod.rs  rng_tracker.rs  xoroshiro.rs  xorshift.rs
libs/csight-core/src/sv/: mod.rs  offsets.rs  read.rs
libs/csight-core/src/swsh/: den.rs  den_encounter.rs  den_hashes.rs  den_shiny_details.rs  dens.rs  mod.rs  offsets.rs  raid_seed.rs  read.rs  rng.rs  shield_nests.rs  sword_nests.rs
(+303 files in other folders)
